# project-zahlen

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .envrc  .gitattributes  .gitignore  .gitmodules  .gpl-spdx-template  .licenserc  .luarc.json  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  configure_assets.py  lsan.supp  tsan.supp  ubsan.supp
.github/workflows/: ci.yml
cmake/: AppleShim.cmake  CreateSymlinks.cmake  ShaderCompilation.cmake
include/: SharedMath.hpp  Zahlen.h
include/Zahlen/: Allocator.hpp  AssetFactory.hpp  AssetManager.hpp  Audio.hpp  Buffer.h  Buffer.hpp  Camera.hpp  Clock.hpp  CommandLine.hpp  Common.h  Components.hpp  Config.hpp  Console.hpp  CreativeWorksFactory.hpp  CreativeWorksManager.hpp  Engine.hpp  EngineCode.hpp  Entity.hpp  Error.hpp  Font8x8.hpp  Format.hpp  GUI.hpp  Input.hpp  Log.hpp  Math3D.hpp  ModelPrefab.hpp  Mutex.hpp  Physics.hpp  PhysicsWorld.hpp  Platform.hpp  Profiler.hpp  Render.hpp  Resources.hpp  Scripting.h  Scripting.hpp  Sync.hpp  Thread.hpp  Types.hpp  Window.hpp
include/Zahlen/alife/: Factions.hpp  GOAP.hpp  Graph.hpp  Simulator.hpp  SpatialGrid.hpp  Types.hpp
resources/assets/: Circus Lobby V9.glb
resources/shaders/: Basic.hlsl  Basic.metal  SHADER.md  ambient.hlsl  basic.frag  basic.glsl  basic.hlsl  basic.metal  basic.vert  basic.vert.spv  blit.hlsl  bloom_blur.hlsl  bloom_threshold.hlsl  cluster_bounds.hlsl  cluster_culling.hlsl  common.hlsl  culling.hlsl  fxaa.hlsl  hang_gpu.hlsl  lighting.hlsl  mlaa.hlsl  particle_render.hlsl  particle_update.hlsl  pbr_helpers.hlsl  postprocess.hlsl  postprocess_template.hlsl  procedural_bake.hlsl  punctual_shadows.hlsl  reflection.hlsl  skinning.hlsl  smaa_wrap.hlsl  standard.hlsl  taa.hlsl  toon.hlsl  ui.hlsl  uniforms.hlsl  volumetric_injection.hlsl  volumetric_integration.hlsl  volumetric_scattering.hlsl
scripts/: boot.lua  dialogue_db.fnl  dialogue_db.lua  gameplay.fnl  gameplay.lua  gameplay_advanced.lua  gameplay_snow.fnl  gameplay_template.fnl  gameplay_template.lua  gameplay_volumetric.fnl  hello.lua  main_menu.fnl  main_menu.lua
scripts/core/: dialogue.fnl  dialogue.lua  ecs.fnl  ecs.lua  ffi_cdef.fnl  ffi_cdef.lua  inventory.fnl  inventory.lua  memory.lua  memoryview.fnl  memoryview.lua  scheduler.fnl  scheduler.lua  zahlen.fnl  zahlen.lua  zahlen_api.lua  zhln.lua
src/: cooker_main.cpp  editor_main.cpp  game_main.cpp  main.cpp  ssr_test.cpp  zcook.cpp
src/alife/: CMakeLists.txt  Factions.cpp  GOAP.cpp  Graph.cpp  Simulator.cpp  SpatialGrid.cpp
src/audio/: AudioContext.cpp  CMakeLists.txt
src/detail/: Array.hpp  Atomic.hpp  ControlFlow.hpp  HashMap.hpp  Loop.hpp  MemoryPool.hpp  Platform.hpp  Prefetch.hpp  Print.hpp  Queue.hpp  RadixSort.hpp  Ranges.hpp  Reflection.hpp  SkipList.hpp  Span.hpp  String.hpp
src/ecs/: CMakeLists.txt  ECS.cpp  ECS.hpp  EntityCommandBuffer.cpp  EntityCommandBuffer.hpp  SystemGraph.cpp  SystemGraph.hpp
src/engine/: Allocator.cpp  Allocator.hpp  AssertHandler.cpp  AssetFactory.cpp  AssetFactory.hpp  AssetManager.cpp  BRDFLUT.cpp  Buffer.cpp  CommandLine.cpp  ConsoleUI.cpp  CreativeWorksFactory.cpp  CreativeWorksManager.cpp  DiagnosticUI.cpp  Engine.cpp  Engine.hpp  FileWatcher.hpp  GizmoUI.cpp  IBLProcessor.hpp  IScriptRuntime.hpp  Input.cpp  LevelLoader.cpp  LuaScriptRuntime.cpp  LuaScriptRuntime.hpp  Math3D.cpp  Math3D.hpp  MeshBuilder.cpp  Mutex.cpp  Mutex.hpp  PBR.hpp  ParallelDraw.hpp  Physics.cpp  PhysicsContactEvents.hpp  PhysicsWorld.hpp  Physics_C.cpp  Platform.cpp  Platform.hpp  ProfilerUI.cpp  Render.cpp  Render.hpp  RenderDocInit.cpp  (+29 more)
src/physics/: CMakeLists.txt  ConstraintFactory.cpp  DOCUMENTED_BUGS.md  Physics.cpp  Physics.hpp  PhysicsCommand.cpp  PhysicsContactEvents.hpp  PhysicsDebug.cpp  PhysicsDebug.hpp  PhysicsQuery.cpp  PhysicsSync.cpp  PhysicsSync.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp  RagdollFactory.cpp
src/render/: .clang-tidy  .clangd  Allocator.cpp  Allocator.hpp  CMakeLists.txt  CommandPool.hpp  CommandPool.inl  Commands.cpp  Commands.hpp  ComputePass.cpp  ComputePass.hpp  ComputePass.inl  Context.cpp  Context.hpp  DescriptorHeap.cpp  DescriptorHeap.hpp  DescriptorLayout.cpp  DescriptorLayout.hpp  DescriptorLayout.inl  DynamicRendering.hpp  DynamicRendering.inl  Extensions.cpp  Extensions.hpp  Features.hpp  Features.inl  FrameSync.hpp  FrameSync.inl  GpuProfiler.hpp  GpuProfiler.inl  Handles.hpp  Handles.inl  ImageView.hpp  ImageView.inl  ParallelDraw.hpp  ParallelRecorder.hpp  ParallelRecorder.inl  PipelineBuilder.cpp  PipelineBuilder.hpp  Postprocessing.hpp  Postprocessing.inl  (+41 more)
src/render/crt_app/: .DEMO  crt.hlsl  main.cpp
src/render/cube_app/: .DEMO  cube.hlsl  cube.vert  main.cpp  math.hpp
src/render/demo_utils/: CMakeLists.txt  DemoWindow.hpp  DemoWindow_linux.cpp  DemoWindow_mac.mm  DemoWindow_win32.cpp
src/render/legacy/: DynamicPass.hpp  PassCache.hpp
src/render/raw_triangle_app/: .DEMO  main.cpp  raw_triangle.hlsl
src/render/sponza_app/: .DEMO  SponzaSpecifics.hpp  fxaa.hlsl  main.cpp  shadow.hlsl  sponza.hlsl
src/render/tests/: CMakeLists.txt  HeadlessCtx.hpp  main.cpp  test_buffer.cpp  test_device.cpp  test_image.cpp  test_pipeline.cpp  test_raii.cpp  test_swapchain_support.cpp  test_sync.cpp  test_upload.cpp  test_utils.cpp
src/render/triangle_app/: .DEMO  main.cpp  triangle.hlsl  triangle.vert
src/reporter/: CMakeLists.txt  main.cpp
src/threading/: AssemblyDefinitions.h  CMakeLists.txt  Channel.hpp  ConditionalVariable.hpp  Mutex.cpp  Mutex.hpp  TaskSystem.cpp  TaskSystem.hpp  Thread.S  Thread.cpp  Thread.hpp
src/zcook/: BinaryReader.hpp  Cook.cpp  Cook.hpp  GLB.cpp  GLB.hpp  IR.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Transform.cpp  Transform.hpp  main.cpp
tools/: analyze_vertices.py  bake_atlas.py  build.sh  context_dump.py  convert_assets.py  docker_zahlen.sh  export_metadata.py  gltf_analyzer.py  pipeline.py  project_layout.py  pyproject.toml  query_asset.py  run_blender.py
tools/animation_utils/: anim_math.py  main_generator.py  proc_toxilisk.py  state_configs.json
tools/asset_utils/: baker.py  cleaner.py  converter.py
(+40 files in other folders)
